styles.css
body{
    width: 100%;
    height: 100vh;
    margin: 0;
    background-color: rgb(6, 12, 10);
    color: #f5f6f7;
    font-family: Tahoma;
    font-size: 16px;
}

h2, h3{
    margin: 1em auto;
    text-align: center;
}

input{
    margin: auto;
    width: 90%;
    min-height: 2em;
    box-sizing: border-box;
}

.center-block{
    margin: auto;
    width: 300px;
    position: relative;
}

.items-list{
    margin: auto;
    width: 300px;
    position: relative;
}

#add-item-button{
    margin: auto;
    width: 10%;
    min-height: 2em;
    position: absolute;
}

#pick-random-item{
    margin: 10px 0px 10px 0px;
    width: 50%;
    min-height: 2em;
}
#clear-items-button{
    margin: 10px 0px 10px 0;
    width: 50%;
    min-height: 2em;
    position: absolute;
}

